--- a/Instructor-Application/bin/pom.xml
+++ b/Instructor-Application/bin/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.0</version>
+		<version>2.7.14</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.cognixia.jump</groupId>
@@ -13,10 +13,12 @@
 	<version>0.0.1</version>
 	<name>Instructor-Application</name>
 	<description>Instructor Application Project</description>
+	<packaging>jar</packaging>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -55,6 +57,17 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt</artifactId>
+		    <version>0.9.1</version>
+		</dependency>
+		<dependency>
+			 <groupId>org.springdoc</groupId>
+			 <artifactId>springdoc-openapi-ui</artifactId>
+			 <version>1.6.6</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
